# cmake-demo

./: CMakeLists.txt  demo.cc
add/: CMakeLists.txt
add/include/add/: add.h
print/: CMakeLists.txt  print.c
